--- a/ficheros_p3-3/Ejercicio4/ejercicio_dpnp.ipynb
+++ b/ficheros_p3-3/Ejercicio4/ejercicio_dpnp.ipynb
@@ -161,7 +161,30 @@
     "import dpnp as np\n",
     "import time\n",
     "\n",
-    "#...."
+    "def main(N, dtypefp, device):\n",
+    "    if dtypefp=='float32':\n",
+    "        size_dtypefp = np.dtype(np.float32).itemsize\n",
+    "        npfloat = np.float32\n",
+    "    else: \n",
+    "        size_dtypefp = np.dtype(np.float64).itemsize\n",
+    "        npfloat = np.float64\n",
+    "\n",
+    "    np.random.seed(17) # set the random number generator seed\n",
+    "\n",
+    "    x = np.random.random(N, device=device)\n",
+    "    y = np.random.random(N, device=device)\n",
+    "\n",
+    "    t1 = time.perf_counter()\n",
+    "    z = np.multiply(x, x) + np.multiply(y,y)\n",
+    "    hits = np.count_nonzero(z <=1.0)\n",
+    "    my_pi = 4.0*hits/N\n",
+    "    t2 = time.perf_counter()\n",
+    "    print(\"N={}  pi={}\".format(N, my_pi))\n",
+    "    print(\"calc_pi took {} s.\".format(t2-t1))\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main(N=500_000_000, dtypefp='float32', device='cpu')"
    ]
   },
   {
