--- a/ficheros_p3-3/Ejercicio4/ejercicio_dpnp.ipynb
+++ b/ficheros_p3-3/Ejercicio4/ejercicio_dpnp.ipynb
@@ -312,8 +312,28 @@
     "    n_samples, n_features = X.shape\n",
     "\n",
     "    # Elegir k puntos iniciales aleatorios como centroides\n",
-    "    #.....\n",
+    "    rng = npy.random.default_rng(42)\n",
+    "    random_indices = rng.choice(n_samples, size=k, replace=False)\n",
+    "    random_indices_xpu = np.asarray(random_indices, device='cpu')\n",
+    "    centroids = X[random_indices_xpu]\n",
     "\n",
+    "    for iteration in range(max_iters):\n",
+    "        # Calcular distancias (n_samples x k)\n",
+    "        distances = np.linalg.norm(X[:, np.newaxis] - centroids, axis=2)\n",
+    "        # Asignar cada punto al centroide más cercano\n",
+    "        labels = np.argmin(distances, axis=1)\n",
+    "\n",
+    "        # Calcular nuevos centroides\n",
+    "        new_centroids = np.array([X[labels == i].mean(axis=0) for i in range(k)])\n",
+    "\n",
+    "        # Verificar convergencia\n",
+    "        shift = np.linalg.norm(centroids - new_centroids).asnumpy()\n",
+    "        if verbose:\n",
+    "            print(f\"Iter {iteration}, shift = {shift:.6f}\")\n",
+    "        if shift < tol:\n",
+    "            break\n",
+    "\n",
+    "        centroids = new_centroids\n",
     "\n",
     "    return centroids, labels\n",
     "\n",
