--- a/practicas-4/ficheros_p4-2/ejercicio1/ejercicio1.ipynb
+++ b/practicas-4/ficheros_p4-2/ejercicio1/ejercicio1.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "%%time\n",
     "actores = [InferenceEngine.remote(load_images=True) for i in range(os.cpu_count())]\n",
     "\n",
     "resultVersionC_1 = []\n",
@@ -225,6 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "import os\n",
     "tiny_imagenet = load_dataset('Maysee/tiny-imagenet')\n",
     "actores = [InferenceEngine.remote(load_images=False) for i in range(os.cpu_count())]\n",
@@ -233,6 +234,8 @@
     "for i in range(0, 10000, 40):\n",
     "    actor = actores[len(resultVersionC_2) % len(actores)]\n",
     "    resultVersionC_2.append(actor.classify_image_object.remote(tiny_imagenet[\"train\"][i][\"image\"]))\n",
+    "\n",
+    "resultVersionC_2 = ray.get(resultVersionC_2)\n",
     "\n",
     "for actor in actores:\n",
     "    ray.kill(actor)"
