cnn 3.1 clasifica bien

--- a/practicas-4/ficheros_p4-2/ejercicio1/ejercicio1.ipynb
+++ b/practicas-4/ficheros_p4-2/ejercicio1/ejercicio1.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-17 20:08:18.480351: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-05-20 11:06:42.888809: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1747512498.549442     435 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1747512498.567810     435 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1747512498.664277     435 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1747512498.664316     435 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1747512498.664318     435 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1747512498.664319     435 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-05-17 20:08:18.678262: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1747739203.091700     391 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1747739203.145206     391 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1747739203.576799     391 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1747739203.576886     391 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1747739203.576892     391 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1747739203.576894     391 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-05-20 11:06:43.629479: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,8 +88,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8min 10s, sys: 2.22 s, total: 8min 12s\n",
-      "Wall time: 1min 8s\n"
+      "CPU times: user 7min 58s, sys: 2.61 s, total: 8min 1s\n",
+      "Wall time: 1min 12s\n"
      ]
     }
    ],
@@ -131,9 +131,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No model was supplied, defaulted to google/vit-base-patch16-224 and revision 3f49326 (https://huggingface.co/google/vit-base-patch16-224).\n",
+      "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
+      "Device set to use cpu\n",
+      "2025-05-20 11:09:59,299\tWARNING services.py:2159 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67104768 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=4.34gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
+      "2025-05-20 11:10:00,532\tINFO worker.py:1879 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265 \u001b[39m\u001b[22m\n",
+      "\u001b[36m(inference pid=1676)\u001b[0m 2025-05-20 11:10:40.924324: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "\u001b[36m(inference pid=1676)\u001b[0m WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "\u001b[36m(inference pid=1676)\u001b[0m E0000 00:00:1747739440.992117    1676 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "\u001b[36m(inference pid=1676)\u001b[0m E0000 00:00:1747739441.014766    1676 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "\u001b[36m(inference pid=1676)\u001b[0m W0000 00:00:1747739441.095323    1676 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(inference pid=1676)\u001b[0m W0000 00:00:1747739441.095819    1676 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(inference pid=1676)\u001b[0m W0000 00:00:1747739441.095835    1676 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(inference pid=1676)\u001b[0m W0000 00:00:1747739441.095847    1676 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(inference pid=1676)\u001b[0m 2025-05-20 11:10:41.115423: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "\u001b[36m(inference pid=1676)\u001b[0m To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.36 s, sys: 4.34 s, total: 6.7 s\n",
+      "Wall time: 3min 38s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "tiny_imagenet = load_dataset('Maysee/tiny-imagenet')\n",
@@ -160,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,9 +224,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m(pid=8328)\u001b[0m 2025-05-20 12:15:55.781615: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "\u001b[36m(pid=8328)\u001b[0m WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "\u001b[36m(pid=8328)\u001b[0m E0000 00:00:1747743355.833922    8328 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "\u001b[36m(pid=8328)\u001b[0m E0000 00:00:1747743355.865139    8328 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "\u001b[36m(pid=8330)\u001b[0m W0000 00:00:1747743355.868394    8330 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(pid=8330)\u001b[0m W0000 00:00:1747743355.868458    8330 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(pid=8330)\u001b[0m W0000 00:00:1747743355.868464    8330 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(pid=8330)\u001b[0m W0000 00:00:1747743355.868469    8330 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(pid=8330)\u001b[0m 2025-05-20 12:15:55.880000: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "\u001b[36m(pid=8330)\u001b[0m To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "\u001b[36m(InferenceEngine pid=8327)\u001b[0m No model was supplied, defaulted to google/vit-base-patch16-224 and revision 3f49326 (https://huggingface.co/google/vit-base-patch16-224).\n",
+      "\u001b[36m(InferenceEngine pid=8327)\u001b[0m Using a pipeline without specifying a model name and revision in production is not recommended.\n",
+      "\u001b[36m(pid=8332)\u001b[0m 2025-05-20 12:15:56.177399: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=8332)\u001b[0m WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=8332)\u001b[0m E0000 00:00:1747743356.214002    8332 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=8332)\u001b[0m E0000 00:00:1747743356.222418    8332 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=8332)\u001b[0m W0000 00:00:1747743356.243303    8332 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\u001b[32m [repeated 28x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=8332)\u001b[0m 2025-05-20 12:15:56.248918: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=8332)\u001b[0m To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(InferenceEngine pid=8327)\u001b[0m Device set to use cpu\n",
+      "\u001b[36m(pid=9152)\u001b[0m 2025-05-20 12:19:18.408908: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "\u001b[36m(pid=9152)\u001b[0m WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "\u001b[36m(pid=9152)\u001b[0m E0000 00:00:1747743558.447690    9152 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "\u001b[36m(pid=9152)\u001b[0m E0000 00:00:1747743558.459048    9152 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "\u001b[36m(pid=9152)\u001b[0m W0000 00:00:1747743558.500927    9152 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(pid=9152)\u001b[0m W0000 00:00:1747743558.500992    9152 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(pid=9152)\u001b[0m W0000 00:00:1747743558.500996    9152 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(pid=9152)\u001b[0m W0000 00:00:1747743558.501000    9152 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "\u001b[36m(pid=9152)\u001b[0m 2025-05-20 12:19:18.508749: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "\u001b[36m(pid=9152)\u001b[0m To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "\u001b[36m(InferenceEngine pid=9149)\u001b[0m No model was supplied, defaulted to google/vit-base-patch16-224 and revision 3f49326 (https://huggingface.co/google/vit-base-patch16-224).\n",
+      "\u001b[36m(InferenceEngine pid=9149)\u001b[0m Using a pipeline without specifying a model name and revision in production is not recommended.\n",
+      "\u001b[36m(pid=9154)\u001b[0m 2025-05-20 12:19:18.408894: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=9154)\u001b[0m WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=9154)\u001b[0m E0000 00:00:1747743558.447636    9154 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=9154)\u001b[0m E0000 00:00:1747743558.459048    9154 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=9154)\u001b[0m W0000 00:00:1747743558.499030    9154 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\u001b[32m [repeated 28x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=9154)\u001b[0m 2025-05-20 12:19:18.505987: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(pid=9154)\u001b[0m To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\u001b[32m [repeated 7x across cluster]\u001b[0m\n",
+      "\u001b[36m(InferenceEngine pid=9149)\u001b[0m Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.19 s, sys: 387 ms, total: 1.58 s\n",
+      "Wall time: 3min 14s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "import os\n",
@@ -222,9 +307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.71 s, sys: 544 ms, total: 2.25 s\n",
+      "Wall time: 3min 12s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "tiny_imagenet = load_dataset('Maysee/tiny-imagenet')\n",
