dpnp version Mario

--- a/ficheros_p3-3/Ejercicio4/ejercicio_dpnp.ipynb
+++ b/ficheros_p3-3/Ejercicio4/ejercicio_dpnp.ipynb
@@ -307,14 +307,14 @@
     "import numpy as npy\n",
     "import dpnp as np \n",
     "\n",
-    "def kmeans_dpnp(X, k, max_iters=100, tol=1e-7, verbose=False):\n",
+    "def kmeans_dpnp(X, k, device=\"cpu\", max_iters=100, tol=1e-7, verbose=False):\n",
     "    # X es un array (n_samples, n_features)\n",
     "    n_samples, n_features = X.shape\n",
     "\n",
     "    # Elegir k puntos iniciales aleatorios como centroides\n",
     "    rng = npy.random.default_rng(42)\n",
     "    random_indices = rng.choice(n_samples, size=k, replace=False)\n",
-    "    random_indices_xpu = np.asarray(random_indices, device='cpu')\n",
+    "    random_indices_xpu = np.asarray(random_indices, device=device)\n",
     "    centroids = X[random_indices_xpu]\n",
     "\n",
     "    for iteration in range(max_iters):\n",
@@ -337,13 +337,13 @@
     "\n",
     "    return centroids, labels\n",
     "\n",
-    "\n",
-    "X_dpnp = np.asarray(X_np, device=\"cpu\")  # Convert from numpy to dpnp array\n",
+    "device = \"gpu\"\n",
+    "X_dpnp = np.asarray(X_np, device=device)  # Convert from numpy to dpnp array\n",
     "\n",
     "start = time.time()\n",
-    "centroids, labels = kmeans_dpnp(X_dpnp, k=5, verbose=False)\n",
+    "centroids, labels = kmeans_dpnp(X_dpnp, device=device,k=5, verbose=False)\n",
     "print(\"Time to Kmeans with DPNP:\", time.time() - start)\n",
-    "print(\"Centroids:\\n\", centroids.asnumpy())"
+    "print(\"Centroids:\\n\", centroids.asnumpy())\n"
    ]
   }
  ],
